--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   ],
   "sideEffects": false,
   "scripts": {
+    "debug": "rollup -w -c scripts/config.js --environment TARGET:web-full-dev --sourcemap",
     "dev": "rollup -w -c scripts/config.js --environment TARGET:web-full-dev",
     "dev:cjs": "rollup -w -c scripts/config.js --environment TARGET:web-runtime-cjs-dev",
     "dev:esm": "rollup -w -c scripts/config.js --environment TARGET:web-runtime-esm",
